--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: "androidx.navigation.safeargs.kotlin"
-
+apply plugin: "kotlin-kapt"
+apply plugin: "dagger.hilt.android.plugin"
 
 android {
     compileSdkVersion 29
@@ -62,8 +63,17 @@ dependencies {
     implementation 'com.apollographql.apollo:apollo-runtime:2.2.1'
     implementation 'com.apollographql.apollo:apollo-coroutines-support:2.2.1'
     implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.room:room-runtime:2.2.5'
+    implementation 'com.google.dagger:hilt-android:2.28-alpha'
+    kapt 'androidx.room:room-compiler:2.2.5'
+    kapt 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    // When using Kotlin.
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+    implementation "com.apollographql.apollo:apollo-normalized-cache-sqlite:2.2.1"
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
 }
