--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,13 +67,14 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.28-alpha'
     kapt 'androidx.room:room-compiler:2.2.5'
     kapt 'com.google.dagger:hilt-android-compiler:2.28-alpha'
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     // When using Kotlin.
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     implementation "com.apollographql.apollo:apollo-normalized-cache-sqlite:2.2.1"
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
